Fixed bug #31705 (parse_url() does not recognize http://foo.com#bar)